--- a/Minesweeper/View Controllers/ANGridViewController.xib
+++ b/Minesweeper/View Controllers/ANGridViewController.xib
@@ -6,6 +6,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ANGridViewController">
             <connections>
+                <outlet property="gridCollectionView" destination="k6w-8C-19A" id="CsQ-2Q-bF8"/>
+                <outlet property="showMinesButton" destination="QiS-08-ahu" id="Klq-51-XzW"/>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
         </placeholder>
@@ -13,7 +15,53 @@
         <view contentMode="scaleToFill" id="1">
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="usY-vZ-XIy" userLabel="Tob Bar View">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QiS-08-ahu">
+                            <rect key="frame" x="10" y="10" width="84" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" title="Show Mines">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="onShowMinesButtonTapped:" destination="-1" eventType="touchUpInside" id="x6d-tY-uyr"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="1qB-9D-Lb4"/>
+                    </constraints>
+                </view>
+                <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="k6w-8C-19A" userLabel="Grid">
+                    <rect key="frame" x="0.0" y="50" width="320" height="518"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="PpH-cq-YsM">
+                        <size key="itemSize" width="30" height="30"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                    <cells/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="MWZ-Zb-Va0"/>
+                        <outlet property="delegate" destination="-1" id="0WD-GC-QCr"/>
+                    </connections>
+                </collectionView>
+            </subviews>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="usY-vZ-XIy" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="WV1-rT-bal"/>
+                <constraint firstItem="k6w-8C-19A" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="Wnc-nt-5xk"/>
+                <constraint firstAttribute="trailing" secondItem="k6w-8C-19A" secondAttribute="trailing" id="fFz-X4-GWm"/>
+                <constraint firstItem="k6w-8C-19A" firstAttribute="top" secondItem="usY-vZ-XIy" secondAttribute="bottom" id="jsn-EO-GX0"/>
+                <constraint firstItem="usY-vZ-XIy" firstAttribute="top" secondItem="1" secondAttribute="top" id="lM1-No-vf5"/>
+                <constraint firstAttribute="bottom" secondItem="k6w-8C-19A" secondAttribute="bottom" id="ohP-o5-Wpq"/>
+                <constraint firstAttribute="trailing" secondItem="usY-vZ-XIy" secondAttribute="trailing" id="xjk-uL-fJS"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
