--- a/Minesweeper/View Controllers/ANGridViewController.xib
+++ b/Minesweeper/View Controllers/ANGridViewController.xib
@@ -30,6 +30,16 @@
                                 <action selector="onShowMinesButtonTapped:" destination="-1" eventType="touchUpInside" id="x6d-tY-uyr"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NeP-Kp-fPd">
+                            <rect key="frame" x="127" y="10" width="54" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <state key="normal" title="Validate">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="onValidateButtonTapped:" destination="-1" eventType="touchUpInside" id="xOh-MN-nXa"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <constraints>
