--- a/Minesweeper/View Controllers/ANGridViewController.xib
+++ b/Minesweeper/View Controllers/ANGridViewController.xib
@@ -20,9 +20,13 @@
                     <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QiS-08-ahu">
-                            <rect key="frame" x="10" y="10" width="84" height="30"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QiS-08-ahu">
+                            <rect key="frame" x="20" y="10" width="84" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="L8y-4S-UeW"/>
+                                <constraint firstAttribute="width" constant="84" id="ne8-Fo-Sgj"/>
+                            </constraints>
                             <state key="normal" title="Show Mines">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -30,9 +34,13 @@
                                 <action selector="onShowMinesButtonTapped:" destination="-1" eventType="touchUpInside" id="x6d-tY-uyr"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NeP-Kp-fPd">
-                            <rect key="frame" x="127" y="10" width="54" height="30"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NeP-Kp-fPd">
+                            <rect key="frame" x="128" y="10" width="64" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="64" id="a4u-Gr-q1P"/>
+                                <constraint firstAttribute="height" constant="30" id="lhY-HR-vrM"/>
+                            </constraints>
                             <state key="normal" title="Validate">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
@@ -40,10 +48,33 @@
                                 <action selector="onValidateButtonTapped:" destination="-1" eventType="touchUpInside" id="xOh-MN-nXa"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Ji-N4-ggT">
+                            <rect key="frame" x="224" y="10" width="76" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="76" id="0eK-pa-ejo"/>
+                                <constraint firstAttribute="height" constant="30" id="WyU-Xc-FS6"/>
+                            </constraints>
+                            <state key="normal" title="New Game">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="onNewGameButtonTapped:" destination="-1" eventType="touchUpInside" id="X8m-Nr-KXG"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="50" id="1qB-9D-Lb4"/>
+                        <constraint firstItem="4Ji-N4-ggT" firstAttribute="top" secondItem="usY-vZ-XIy" secondAttribute="top" constant="10" id="84V-2U-fNc"/>
+                        <constraint firstAttribute="bottom" secondItem="NeP-Kp-fPd" secondAttribute="bottom" constant="10" id="Cgs-cB-jRs"/>
+                        <constraint firstItem="QiS-08-ahu" firstAttribute="leading" secondItem="usY-vZ-XIy" secondAttribute="leading" constant="20" id="GVk-gb-0c4"/>
+                        <constraint firstItem="QiS-08-ahu" firstAttribute="top" secondItem="usY-vZ-XIy" secondAttribute="top" constant="10" id="TKF-nQ-dXJ"/>
+                        <constraint firstAttribute="bottom" secondItem="QiS-08-ahu" secondAttribute="bottom" constant="10" id="Xa3-5w-nsJ"/>
+                        <constraint firstItem="NeP-Kp-fPd" firstAttribute="top" secondItem="usY-vZ-XIy" secondAttribute="top" constant="10" id="fF5-6S-d19"/>
+                        <constraint firstAttribute="trailing" secondItem="4Ji-N4-ggT" secondAttribute="trailing" constant="20" id="ft5-c1-Z3h"/>
+                        <constraint firstAttribute="centerX" secondItem="NeP-Kp-fPd" secondAttribute="centerX" id="nXg-UI-MWR"/>
+                        <constraint firstAttribute="bottom" secondItem="4Ji-N4-ggT" secondAttribute="bottom" constant="10" id="r9E-fJ-hkN"/>
                     </constraints>
                 </view>
                 <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="k6w-8C-19A" userLabel="Grid">
