--- a/Minesweeper/View Controllers/ANGridViewController.xib
+++ b/Minesweeper/View Controllers/ANGridViewController.xib
@@ -7,6 +7,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ANGridViewController">
             <connections>
                 <outlet property="gridCollectionView" destination="k6w-8C-19A" id="CsQ-2Q-bF8"/>
+                <outlet property="gridCollectionViewFlowLayout" destination="b0n-MX-oSH" id="Eqm-Yh-gie"/>
                 <outlet property="gridSizeLabel" destination="SJw-HE-8wN" id="9r5-YO-s4k"/>
                 <outlet property="minesCountLabel" destination="zKe-TA-GRf" id="bmC-MA-1KJ"/>
                 <outlet property="minesSlider" destination="sBO-FV-hLC" id="UpJ-oe-ye9"/>
@@ -185,14 +186,9 @@
                     </constraints>
                 </view>
                 <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="k6w-8C-19A" userLabel="Grid">
-                    <rect key="frame" x="0.0" y="120" width="320" height="448"/>
+                    <rect key="frame" x="5" y="125" width="310" height="438"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="PpH-cq-YsM">
-                        <size key="itemSize" width="30" height="30"/>
-                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    </collectionViewFlowLayout>
+                    <collectionViewLayout key="collectionViewLayout" id="b0n-MX-oSH" customClass="ANGridCollectionViewFlowLayout"/>
                     <cells/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="MWZ-Zb-Va0"/>
@@ -200,14 +196,14 @@
                     </connections>
                 </collectionView>
             </subviews>
-            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="0.0" alpha="0.80000000000000004" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="usY-vZ-XIy" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="WV1-rT-bal"/>
-                <constraint firstItem="k6w-8C-19A" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="Wnc-nt-5xk"/>
-                <constraint firstAttribute="trailing" secondItem="k6w-8C-19A" secondAttribute="trailing" id="fFz-X4-GWm"/>
-                <constraint firstItem="k6w-8C-19A" firstAttribute="top" secondItem="usY-vZ-XIy" secondAttribute="bottom" id="jsn-EO-GX0"/>
+                <constraint firstItem="k6w-8C-19A" firstAttribute="leading" secondItem="1" secondAttribute="leading" constant="5" id="Wnc-nt-5xk"/>
+                <constraint firstAttribute="trailing" secondItem="k6w-8C-19A" secondAttribute="trailing" constant="5" id="fFz-X4-GWm"/>
+                <constraint firstItem="k6w-8C-19A" firstAttribute="top" secondItem="usY-vZ-XIy" secondAttribute="bottom" constant="5" id="jsn-EO-GX0"/>
                 <constraint firstItem="usY-vZ-XIy" firstAttribute="top" secondItem="1" secondAttribute="top" id="lM1-No-vf5"/>
-                <constraint firstAttribute="bottom" secondItem="k6w-8C-19A" secondAttribute="bottom" id="ohP-o5-Wpq"/>
+                <constraint firstAttribute="bottom" secondItem="k6w-8C-19A" secondAttribute="bottom" constant="5" id="ohP-o5-Wpq"/>
                 <constraint firstAttribute="trailing" secondItem="usY-vZ-XIy" secondAttribute="trailing" id="xjk-uL-fJS"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
